ユーザー管理機能実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,5 @@
 @import "modules/messages";
 @import "modules/chatmain";
 @import "modules/sidebar";
+@import "modules/user";
+@import "modules/flash";
