グループの新規作成・編集機能2

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,7 +5,7 @@
         = current_user.name
       .header__box__icon
         .header__box__icon__icon1
-          =link_to '#', class: "icon1" do
+          =link_to new_group_path, class: "icon1" do
             =icon('fas', 'edit')
         .header__box__icon__icon2
           =link_to edit_user_path(current_user), class: "icon2" do
@@ -13,19 +13,13 @@
 
 
   .groups
-    .group
-      .group__name
-        グループ名
-      .group__message
-        新着メッセージ
-    .group
-      .group__name
-        グループ名
-      .group__message
-        新着メッセージ
-    .group
-      .group__name
-        グループ名
-      .group__message
-        新着メッセージ
-      
+    - current_user.groups.each do |group|
+      .group
+        = link_to '#' do
+          .group__name
+            =group.name
+          .group__message
+            新着メッセージ
+
+
+            
