--- a/app/assets/stylesheets/modules/_chatmain.scss
+++ b/app/assets/stylesheets/modules/_chatmain.scss
@@ -41,11 +41,13 @@
       position: absolute;
       right: 40px;
 
-      .edit {
-        text-decoration: none;
-        color: $light_blue;
+      &__btn {       
         text-align: center;
         font-size: 16px;
+        a {
+          text-decoration: none;
+          color: $light_blue;
+        }
       }
     }      
   }
@@ -54,6 +56,7 @@
     height: calc(100vh - 190px);
     background-color: #fafafa;
     padding: 40px 46px;
+    overflow: scroll;
 
     .message {
       padding-bottom: 46px;
