--- a/app/assets/stylesheets/modules/_sidebar.scss
+++ b/app/assets/stylesheets/modules/_sidebar.scss
@@ -51,6 +51,9 @@
     .group {
       box-sizing: border-box;
       padding: 20px 0 40px;
+      a {
+      text-decoration: none;
+      }
 
       &__name {
         font-size: 15px;
